--- a/demo/index.html
+++ b/demo/index.html
@@ -1,41 +1,74 @@
 <html>
+
 <head>
-  <!-- <link rel="stylesheet" href="stylesheets/gridzy.css"> -->
-  <link rel="stylesheet" href="../src/gridzy.min.css"> <!-- Resource style -->
+    <!-- <link rel="stylesheet" href="stylesheets/gridzy.css"> -->
+    <link rel="stylesheet" href="css/gridzy.min.css">
+    <!-- Resource style -->
+    <style>
+        hr {
+            border: 1px solid #e2e2e2;
+        }
+        
+        body {
+            background: rgba(147, 206, 222, 1);
+            background: -moz-linear-gradient(left, rgba(147, 206, 222, 1) 0%, rgba(117, 189, 209, 1) 41%, rgba(73, 165, 191, 1) 100%);
+            background: -webkit-gradient(left top, right top, color-stop(0%, rgba(147, 206, 222, 1)), color-stop(41%, rgba(117, 189, 209, 1)), color-stop(100%, rgba(73, 165, 191, 1)));
+            background: -webkit-linear-gradient(left, rgba(147, 206, 222, 1) 0%, rgba(117, 189, 209, 1) 41%, rgba(73, 165, 191, 1) 100%);
+            background: -o-linear-gradient(left, rgba(147, 206, 222, 1) 0%, rgba(117, 189, 209, 1) 41%, rgba(73, 165, 191, 1) 100%);
+            background: -ms-linear-gradient(left, rgba(147, 206, 222, 1) 0%, rgba(117, 189, 209, 1) 41%, rgba(73, 165, 191, 1) 100%);
+            background: linear-gradient(to right, rgba(147, 206, 222, 1) 0%, rgba(117, 189, 209, 1) 41%, rgba(73, 165, 191, 1) 100%);
+            filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=1);
+        }
+
+    </style>
 </head>
+
 <body>
 
-<div class="container-full">
-  <div class="wrapper">
+    <div class="container-full">
 
-    <div class="row">
+        <div align="center" style="margin-top: 3rem;padding-bottom:3rem;">
+            <img src="gridzy.png">
+        </div>
 
-        <div class="column-12 ndanger-li"><h1>Column 12</h1></div>
 
-  </div>
+        <div class="wrapper">
 
-      <div class="row">
+            <div class="row">
 
-          <div class="column-3 ndanger-li"><h1>Column 3</h1></div>
-          <div class="column-3 ngray"><h1>Column 3</h1></div>
-          <div class="column-3 ninfo-li"><h1>Column 3</h1></div>
+                <div class="column-12 ndanger-li">
+                    <h1>Column 12</h1></div>
 
-</div>
+            </div>
 
-<div class="row">
+            <hr />
 
-          <div class="column-2 ndanger-li">Column 2</div>
-          <div class="column-2 ngray">Column 2</div>
-          <div class="column-2 ndanger-li">Column 2</div>
-          <div class="column-2 ngray">Column 2</div>
-          <div class="column-2 ndanger-li">Column 2</div>
-          <div class="column-2 ngray">Column 2</div>
+            <div class="row">
 
-      </div>
+                <div class="column-3 ndanger-li">
+                    <h1>Column 3</h1></div>
+                <div class="column-3 ngray">
+                    <h1>Column 3</h1></div>
+                <div class="column-3 ninfo-li">
+                    <h1>Column 3</h1></div>
 
-  </div>
-</div>
+            </div>
+
+            <hr />
+
+            <div class="row">
+
+                <div class="column-2 ndanger-li">Column 2</div>
+                <div class="column-2 ngray">Column 2</div>
+                <div class="column-2 ndanger-li">Column 2</div>
+                <div class="column-2 ngray">Column 2</div>
+                <div class="column-2 ndanger-li">Column 2</div>
+                <div class="column-2 ngray">Column 2</div>
+
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
-
